--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Toolbox Demo</title>
   </head>
   <body>
+    <div id="sketch-guide">
+      <img id="small-screen-note" src="/bigger-screen-note.webp" alt="" />
+    </div>
     <div id="dropzone"></div>
     <div id="debug-layer">
       <h2>Debug</h2>
