--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>Toolbox Demo</h1>
       <button id="counter"></button>
       <img id="img" src="" alt="" width="100" height="100" />
-      <canvas></canvas>
+      <canvas id="canvas"></canvas>
     </div>
 
     <script type="module" src="/src/main.js"></script>
