--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     <div id="app">
       <h1>Toolbox Demo</h1>
       <button id="counter"></button>
+      <div id="backend-info">
+        Workspace Info
+        <input id="workspace-input" type="text" />
+        <button id="create-workspace-button">Create Workspace</button>
+        <button id="read-workspace-button">Read Workspace</button>
+        <h3>Workspaces:</h3>
+        <div id="workspace-info"></div>
+      </div>
       <img id="img" src="" alt="" width="100" height="100" />
       <canvas id="canvas"></canvas>
     </div>
