--- a/index.html
+++ b/index.html
@@ -10,30 +10,66 @@
     <div id="sketch-guide">
       <img id="small-screen-note" src="/bigger-screen-note.webp" alt="" />
     </div>
-    <div id="dropzone"></div>
-    <div id="debug-layer">
-      <h2>Debug</h2>
+    <div id="info-layer">
+      <div class="info">loading</div>
+    </div>
+    <div id="transparency-layer">
+      <div class="side-panels">
+        <div id="info-panel">
+          <div class="title">
+            <h1>Toolbox Demo</h1>
+            <img src="/title.webp" alt="" />
+          </div>
+          <div id="credits">
+            <p>
+              a <a href="https://komputer.space">komputer.space</a> tool demo
+            </p>
+            <p>
+              <a id="source-link" href="https://github.com/komputer-space/">
+                → source code</a
+              >
+            </p>
+          </div>
+        </div>
+        <div id="debug-layer"></div>
+      </div>
+      <div id="focus-info">
+        <p>press <em>space</em> to focus</p>
+      </div>
     </div>
     <div class="ui-container ui-bottom">
+      <div class="ui-panel panel-left ui-panel-horizontal">
+        <div id="backend-info">
+          <span>Workspace:</span>
+          <input id="workspace-input" type="text" />
+          <button id="create-workspace-button">Create Workspace</button>
+          <button id="read-workspace-button">Read Workspace</button>
+          <span>Workspaces:</span>
+          <div id="workspace-info"></div>
+        </div>
+      </div>
       <div class="ui-panel ui-panel-horizontal">
         <button id="serial-button">serial connect</button>
       </div>
     </div>
+    <div id="view-mode-indicator">
+      <div>
+        <img src="/view-frame/frame-01.webp" alt="" />
+        <img src="/view-frame/frame-02.webp" alt="" />
+      </div>
+      <div>
+        <img src="/view-frame/frame-03.webp" alt="" />
+        <img src="/view-frame/frame-04.webp" alt="" />
+      </div>
+    </div>
     <div id="app">
+      <div id="dropzone">
+        <canvas id="canvas"></canvas>
+      </div>
       <h1>Toolbox Demo</h1>
       <button id="counter"></button>
-      <div id="backend-info">
-        Workspace Info
-        <input id="workspace-input" type="text" />
-        <button id="create-workspace-button">Create Workspace</button>
-        <button id="read-workspace-button">Read Workspace</button>
-        <h3>Workspaces:</h3>
-        <div id="workspace-info"></div>
-      </div>
       <img id="img" src="" alt="" width="100" height="100" />
-      <canvas id="canvas"></canvas>
     </div>
-
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
